fix review comments
Signed-off-by: Ben Ye <ben.ye@bytedance.com>

--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
@@ -6208,15 +6208,18 @@ spec:
                   the image URL.'
                 type: string
               terminationGracePeriodSeconds:
+                default: "600"
                 description: Optional duration in seconds the pod needs to terminate
                   gracefully. May be decreased in delete request. Value must be non-negative
                   integer. The value zero indicates stop immediately via the kill
                   signal (no opportunity to shut down). If this value is nil, the
-                  default grace period will be used instead. The grace period is the
-                  duration in seconds after the processes running in the pod are sent
-                  a termination signal and the time when the processes are forcibly
-                  halted with a kill signal. Set this value longer than the expected
-                  cleanup time for your process. Defaults to 600 seconds.
+                  default grace period will be used instead. Default value is set
+                  to 10 min because Prometheus may take quite long to shutdown to
+                  checkpoint existing data. The grace period is the duration in seconds
+                  after the processes running in the pod are sent a termination signal
+                  and the time when the processes are forcibly halted with a kill
+                  signal. Set this value longer than the expected cleanup time for
+                  your process.
                 format: int64
                 type: integer
               thanos:
