Add support to AlertmanagerConfig for entity and actions fields in the OpsGenie receiver

--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -484,6 +484,10 @@
                           "items": {
                             "description": "OpsGenieConfig configures notifications via OpsGenie. See https://prometheus.io/docs/alerting/latest/configuration/#opsgenie_config",
                             "properties": {
+                              "actions": {
+                                "description": "Comma separated list of actions that will be available for the alert.",
+                                "type": "string"
+                              },
                               "apiKey": {
                                 "description": "The secret's key that contains the OpsGenie API key. The secret needs to be in the same namespace as the AlertmanagerConfig object and accessible by the Prometheus Operator.",
                                 "properties": {
@@ -535,6 +539,10 @@
                                   "type": "object"
                                 },
                                 "type": "array"
+                              },
+                              "entity": {
+                                "description": "Optional field that can be used to specify which domain alert is related to.",
+                                "type": "string"
                               },
                               "httpConfig": {
                                 "description": "HTTP client configuration.",
