Add validation for the OpsGenie's responders

--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -918,6 +918,13 @@
                                     },
                                     "type": {
                                       "description": "Type of responder.",
+                                      "enum": [
+                                        "team",
+                                        "teams",
+                                        "user",
+                                        "escalation",
+                                        "schedule"
+                                      ],
                                       "minLength": 1,
                                       "type": "string"
                                     },
