pkg/apis/monitoring/v1beta1: remove Regex field from Matcher type
Signed-off-by: Simon Pasquier <spasquie@redhat.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -4409,9 +4409,10 @@ spec:
                         description: Matcher defines how to match on alert's labels.
                         properties:
                           matchType:
-                            description: Match operation available with AlertManager
-                              >= v0.22.0 and takes precedence over Regex (deprecated)
-                              if non-empty.
+                            description: Match operator, one of `=` (equal to), `!=`
+                              (not equal to), `=~` (regex match) or `!~` (not regex
+                              match). Negative operators (`!=` and `!~`) require Alertmanager
+                              >= v0.22.0.
                             enum:
                             - '!='
                             - =
@@ -4422,11 +4423,6 @@ spec:
                             description: Label to match.
                             minLength: 1
                             type: string
-                          regex:
-                            description: Whether to match on equality (false) or regular-expression
-                              (true). Deprecated as of AlertManager >= v0.22.0 where
-                              a user should use MatchType instead.
-                            type: boolean
                           value:
                             description: Label value to match.
                             type: string
@@ -4442,9 +4438,10 @@ spec:
                         description: Matcher defines how to match on alert's labels.
                         properties:
                           matchType:
-                            description: Match operation available with AlertManager
-                              >= v0.22.0 and takes precedence over Regex (deprecated)
-                              if non-empty.
+                            description: Match operator, one of `=` (equal to), `!=`
+                              (not equal to), `=~` (regex match) or `!~` (not regex
+                              match). Negative operators (`!=` and `!~`) require Alertmanager
+                              >= v0.22.0.
                             enum:
                             - '!='
                             - =
@@ -4455,11 +4452,6 @@ spec:
                             description: Label to match.
                             minLength: 1
                             type: string
-                          regex:
-                            description: Whether to match on equality (false) or regular-expression
-                              (true). Deprecated as of AlertManager >= v0.22.0 where
-                              a user should use MatchType instead.
-                            type: boolean
                           value:
                             description: Label value to match.
                             type: string
@@ -8253,9 +8245,10 @@ spec:
                       description: Matcher defines how to match on alert's labels.
                       properties:
                         matchType:
-                          description: Match operation available with AlertManager
-                            >= v0.22.0 and takes precedence over Regex (deprecated)
-                            if non-empty.
+                          description: Match operator, one of `=` (equal to), `!=`
+                            (not equal to), `=~` (regex match) or `!~` (not regex
+                            match). Negative operators (`!=` and `!~`) require Alertmanager
+                            >= v0.22.0.
                           enum:
                           - '!='
                           - =
@@ -8266,11 +8259,6 @@ spec:
                           description: Label to match.
                           minLength: 1
                           type: string
-                        regex:
-                          description: Whether to match on equality (false) or regular-expression
-                            (true). Deprecated as of AlertManager >= v0.22.0 where
-                            a user should use MatchType instead.
-                          type: boolean
                         value:
                           description: Label value to match.
                           type: string
