--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -4686,99 +4686,6 @@
                     },
                     "type": "array"
                   },
-                  "muteTimeIntervals": {
-                    "description": "List of MuteTimeInterval specifying when the routes should be muted.",
-                    "items": {
-                      "description": "MuteTimeInterval specifies the periods in time when notifications will be muted",
-                      "properties": {
-                        "name": {
-                          "description": "Name of the time interval",
-                          "type": "string"
-                        },
-                        "timeIntervals": {
-                          "description": "TimeIntervals is a list of TimeInterval",
-                          "items": {
-                            "description": "TimeInterval describes intervals of time",
-                            "properties": {
-                              "daysOfMonth": {
-                                "description": "DaysOfMonth is a list of DayOfMonthRange",
-                                "items": {
-                                  "description": "DayOfMonthRange is an inclusive range of days of the month beginning at 1",
-                                  "properties": {
-                                    "end": {
-                                      "description": "End of the inclusive range",
-                                      "maximum": 31,
-                                      "minimum": -31,
-                                      "type": "integer"
-                                    },
-                                    "start": {
-                                      "description": "Start of the inclusive range",
-                                      "maximum": 31,
-                                      "minimum": -31,
-                                      "type": "integer"
-                                    }
-                                  },
-                                  "type": "object"
-                                },
-                                "type": "array"
-                              },
-                              "months": {
-                                "description": "Months is a list of MonthRange",
-                                "items": {
-                                  "description": "MonthRange is an inclusive range of months of the year beginning in January Months can be specified by name (e.g 'January') by numerical month (e.g '1') or as an inclusive range (e.g 'January:March', '1:3', '1:March')",
-                                  "pattern": "^((?i)january|february|march|april|may|june|july|august|september|october|november|december|[1-12])(?:((:((?i)january|february|march|april|may|june|july|august|september|october|november|december|[1-12]))$)|$)",
-                                  "type": "string"
-                                },
-                                "type": "array"
-                              },
-                              "times": {
-                                "description": "Times is a list of TimeRange",
-                                "items": {
-                                  "description": "TimeRange defines a start and end time in 24hr format",
-                                  "properties": {
-                                    "endTime": {
-                                      "description": "EndTime is the end time in 24hr format.",
-                                      "pattern": "^((([01][0-9])|(2[0-3])):[0-5][0-9])$|(^24:00$)",
-                                      "type": "string"
-                                    },
-                                    "startTime": {
-                                      "description": "StartTime is the start time in 24hr format.",
-                                      "pattern": "^((([01][0-9])|(2[0-3])):[0-5][0-9])$|(^24:00$)",
-                                      "type": "string"
-                                    }
-                                  },
-                                  "type": "object"
-                                },
-                                "type": "array"
-                              },
-                              "weekdays": {
-                                "description": "Weekdays is a list of WeekdayRange",
-                                "items": {
-                                  "description": "WeekdayRange is an inclusive range of days of the week beginning on Sunday Days can be specified by name (e.g 'Sunday') or as an inclusive range (e.g 'Monday:Friday')",
-                                  "pattern": "^((?i)sun|mon|tues|wednes|thurs|fri|satur)day(?:((:(sun|mon|tues|wednes|thurs|fri|satur)day)$)|$)",
-                                  "type": "string"
-                                },
-                                "type": "array"
-                              },
-                              "years": {
-                                "description": "Years is a list of YearRange",
-                                "items": {
-                                  "description": "YearRange is an inclusive range of years",
-                                  "pattern": "^2\\d{3}(?::2\\d{3}|$)",
-                                  "type": "string"
-                                },
-                                "type": "array"
-                              }
-                            },
-                            "type": "object"
-                          },
-                          "type": "array"
-                        }
-                      },
-                      "type": "object"
-                    },
-                    "type": "array"
-                  },
                   "receivers": {
                     "description": "List of receivers.",
                     "items": {
@@ -8707,6 +8614,99 @@
                       }
                     },
                     "type": "object"
+                  },
+                  "timeIntervals": {
+                    "description": "List of TimeInterval specifying when the routes should be muted or active.",
+                    "items": {
+                      "description": "TimeInterval specifies the periods in time when notifications will be muted or active.",
+                      "properties": {
+                        "name": {
+                          "description": "Name of the time interval.",
+                          "type": "string"
+                        },
+                        "timeIntervals": {
+                          "description": "TimeIntervals is a list of TimePeriod.",
+                          "items": {
+                            "description": "TimePeriod describes periods of time.",
+                            "properties": {
+                              "daysOfMonth": {
+                                "description": "DaysOfMonth is a list of DayOfMonthRange",
+                                "items": {
+                                  "description": "DayOfMonthRange is an inclusive range of days of the month beginning at 1",
+                                  "properties": {
+                                    "end": {
+                                      "description": "End of the inclusive range",
+                                      "maximum": 31,
+                                      "minimum": -31,
+                                      "type": "integer"
+                                    },
+                                    "start": {
+                                      "description": "Start of the inclusive range",
+                                      "maximum": 31,
+                                      "minimum": -31,
+                                      "type": "integer"
+                                    }
+                                  },
+                                  "type": "object"
+                                },
+                                "type": "array"
+                              },
+                              "months": {
+                                "description": "Months is a list of MonthRange",
+                                "items": {
+                                  "description": "MonthRange is an inclusive range of months of the year beginning in January Months can be specified by name (e.g 'January') by numerical month (e.g '1') or as an inclusive range (e.g 'January:March', '1:3', '1:March')",
+                                  "pattern": "^((?i)january|february|march|april|may|june|july|august|september|october|november|december|[1-12])(?:((:((?i)january|february|march|april|may|june|july|august|september|october|november|december|[1-12]))$)|$)",
+                                  "type": "string"
+                                },
+                                "type": "array"
+                              },
+                              "times": {
+                                "description": "Times is a list of TimeRange",
+                                "items": {
+                                  "description": "TimeRange defines a start and end time in 24hr format",
+                                  "properties": {
+                                    "endTime": {
+                                      "description": "EndTime is the end time in 24hr format.",
+                                      "pattern": "^((([01][0-9])|(2[0-3])):[0-5][0-9])$|(^24:00$)",
+                                      "type": "string"
+                                    },
+                                    "startTime": {
+                                      "description": "StartTime is the start time in 24hr format.",
+                                      "pattern": "^((([01][0-9])|(2[0-3])):[0-5][0-9])$|(^24:00$)",
+                                      "type": "string"
+                                    }
+                                  },
+                                  "type": "object"
+                                },
+                                "type": "array"
+                              },
+                              "weekdays": {
+                                "description": "Weekdays is a list of WeekdayRange",
+                                "items": {
+                                  "description": "WeekdayRange is an inclusive range of days of the week beginning on Sunday Days can be specified by name (e.g 'Sunday') or as an inclusive range (e.g 'Monday:Friday')",
+                                  "pattern": "^((?i)sun|mon|tues|wednes|thurs|fri|satur)day(?:((:(sun|mon|tues|wednes|thurs|fri|satur)day)$)|$)",
+                                  "type": "string"
+                                },
+                                "type": "array"
+                              },
+                              "years": {
+                                "description": "Years is a list of YearRange",
+                                "items": {
+                                  "description": "YearRange is an inclusive range of years",
+                                  "pattern": "^2\\d{3}(?::2\\d{3}|$)",
+                                  "type": "string"
+                                },
+                                "type": "array"
+                              }
+                            },
+                            "type": "object"
+                          },
+                          "type": "array"
+                        }
+                      },
+                      "type": "object"
+                    },
+                    "type": "array"
                   }
                 },
                 "type": "object"
