--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -2882,25 +2882,9 @@
                                 "type": "object"
                               },
                               "chatID": {
-                                "description": "The Telegram chat ID. The secret needs to be in the same namespace as the AlertmanagerConfig object and accessible by the Prometheus Operator.",
-                                "properties": {
-                                  "key": {
-                                    "description": "The key of the secret to select from.  Must be a valid secret key.",
-                                    "type": "string"
-                                  },
-                                  "name": {
-                                    "description": "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names TODO: Add other useful fields. apiVersion, kind, uid?",
-                                    "type": "string"
-                                  },
-                                  "optional": {
-                                    "description": "Specify whether the Secret or its key must be defined",
-                                    "type": "boolean"
-                                  }
-                                },
-                                "required": [
-                                  "key"
-                                ],
-                                "type": "object"
+                                "description": "The Telegram chat ID.",
+                                "format": "int64",
+                                "type": "integer"
                               },
                               "disableNotifications": {
                                 "description": "Disable telegram notifications",
