alertmanager: Add Telegram Receiver type to AlertmanagerConfig CRD
Moves parseMode to be an enum in the telegram configuration.

Fixes: #4703

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -3078,9 +3078,12 @@ spec:
                             description: Message template
                             type: string
                           parseMode:
-                            description: Parse mode for telegram message, supported
-                              values are MarkdownV2, Markdown, HTML and empty string
-                              for plain text.
+                            description: Parse mode for telegram message
+                            enum:
+                            - ""
+                            - MarkdownV2
+                            - Markdown
+                            - HTML
                             type: string
                           sendResolved:
                             description: Whether to notify about resolved alerts.
