--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -3078,9 +3078,12 @@ spec:
                             description: Message template
                             type: string
                           parseMode:
-                            description: Parse mode for telegram message, supported
-                              values are MarkdownV2, Markdown, HTML and empty string
-                              for plain text.
+                            description: Parse mode for telegram message
+                            enum:
+                            - ""
+                            - MarkdownV2
+                            - Markdown
+                            - HTML
                             type: string
                           sendResolved:
                             description: Whether to notify about resolved alerts.
