makes max_exemplars configurable
This extends the PrometheusSpec to allow to configure the max_exemplars property

Fixes #4791

Signed-off-by: Fausto David Suarez Rosario <faustodavid@hotmail.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -14534,6 +14534,12 @@ spec:
                   - resource
                   type: object
                 type: array
+              exemplars:
+                description: Exemplars related settings that are runtime reloadable.
+                properties:
+                  maxExemplars:
+                    type: integer
+                type: object
               externalLabels:
                 additionalProperties:
                   type: string
