--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
@@ -2774,6 +2774,12 @@ spec:
                   - resource
                   type: object
                 type: array
+              exemplars:
+                description: Exemplars related settings that are runtime reloadable.
+                properties:
+                  maxExemplars:
+                    type: integer
+                type: object
               externalLabels:
                 additionalProperties:
                   type: string
