--- a/example/rbac-none-cluster/prometheus/prometheus-role.yaml
+++ b/example/rbac-none-cluster/prometheus/prometheus-role.yaml
@@ -20,5 +20,5 @@ rules:
   resources:
   - ingresses
   verbs: ["get", "list", "watch"]
-- nonResourceURLs: ["/metrics"]
-  verbs: ["get"]
+#- nonResourceURLs: ["/metrics"]
+#  verbs: ["get"]
