--- a/bundle.yaml
+++ b/bundle.yaml
@@ -14537,7 +14537,7 @@ spec:
               exemplars:
                 description: Exemplars related settings that are runtime reloadable.
                 properties:
-                  maxExemplars:
+                  maxSize:
                     type: integer
                 type: object
               externalLabels:
