`make --always-make format generate`

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -20892,8 +20892,11 @@ spec:
                   type: object
                 type: array
               jobLabel:
-                description: "Chooses the label of the Kubernetes `Endpoints`. Its
-                  value will be used for the `job`-label's value of the created metrics.
+                description: "JobLabel chooses the label of the Kubernetes `Endpoints`.
+                  The value of this field will be used as the value for the `job`-label
+                  in each created metric. \n For example: If in `ServiceMonitor.spec.jobLabel:
+                  foo` and in `Service.metadata.labels.foo: bar`°, then each metric
+                  gets `{job=\"bar\"}`-label. (° to be precise: in the `Endpoint`)
                   \n Default & fallback value: the name of the respective Kubernetes
                   `Endpoint`."
                 type: string
