Extend the PrometheusSpec to allow to configure the max_exemplars (#4834)
* Extend the PrometheusSpec to allow to configure the max_exemplars

Fixes #4791

Signed-off-by: Fausto David Suarez Rosario <faustodavid@hotmail.com>

* rename maxExemplars to maxSize

Signed-off-by: Fausto David Suarez Rosario <faustodavid@hotmail.com>

* update docs

Signed-off-by: Fausto David Suarez Rosario <faustodavid@hotmail.com>

* move appendStorageSettingsConfig null checks to the caller

Signed-off-by: Fausto David Suarez Rosario <faustodavid@hotmail.com>

* Update pkg/prometheus/promcfg.go

Defined minimum supported version

Co-authored-by: Simon Pasquier <spasquie@redhat.com>

* Update pkg/apis/monitoring/v1/types.go

improve docs

Co-authored-by: Simon Pasquier <spasquie@redhat.com>

* Update pkg/apis/monitoring/v1/types.go

Co-authored-by: Simon Pasquier <spasquie@redhat.com>

* move checks to appendStorageSettingsConfig, apply changes if version is at least 2.29.0, refactor test for new logic.

Signed-off-by: Fausto David Suarez Rosario <faustodavid@hotmail.com>

* update docs

Signed-off-by: Fausto David Suarez Rosario <faustodavid@hotmail.com>

* add test to check min version, make explicit that MaxSize is a pointer

Signed-off-by: Fausto David Suarez Rosario <faustodavid@hotmail.com>

Co-authored-by: Simon Pasquier <spasquie@redhat.com>

--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheuses.yaml
@@ -2774,6 +2774,17 @@ spec:
                   - resource
                   type: object
                 type: array
+              exemplars:
+                description: Exemplars related settings that are runtime reloadable.
+                  It requires to enable the exemplar storage feature to be effective.
+                properties:
+                  maxSize:
+                    description: Maximum number of exemplars stored in memory for
+                      all series. If not set, Prometheus uses its default value. A
+                      value of zero or less than zero disables the storage.
+                    format: int64
+                    type: integer
+                type: object
               externalLabels:
                 additionalProperties:
                   type: string
