--- a/bundle.yaml
+++ b/bundle.yaml
@@ -10426,8 +10426,7 @@ spec:
                   type: object
                 type: array
               web:
-                description: Web defines the web command line flags when starting
-                  Alertmanager.
+                description: Defines the web command line flags when starting Alertmanager.
                 properties:
                   tlsConfig:
                     description: WebTLSConfig defines the TLS parameters for HTTPS.
@@ -20137,8 +20136,7 @@ spec:
                   This flag is only available in versions of Prometheus >= 2.11.0.
                 type: boolean
               web:
-                description: Web defines the web command line flags when starting
-                  Prometheus.
+                description: Defines the web command line flags when starting Prometheus.
                 properties:
                   pageTitle:
                     description: The prometheus web page title
