Added support for enable_http2 in endpoint scrape configuration. #4836

--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_servicemonitors.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_servicemonitors.yaml
@@ -139,6 +139,9 @@ spec:
                       required:
                       - key
                       type: object
+                    enableHttp2:
+                      description: Whether to enable HTTP2.
+                      type: boolean
                     followRedirects:
                       description: FollowRedirects configures whether scrape requests
                         follow HTTP 3xx redirects.
