--- a/bundle.yaml
+++ b/bundle.yaml
@@ -10804,6 +10804,9 @@ spec:
                       required:
                       - key
                       type: object
+                    enableHttp2:
+                      description: Whether to enable HTTP2.
+                      type: boolean
                     followRedirects:
                       description: FollowRedirects configures whether scrape requests
                         follow HTTP 3xx redirects.
@@ -20738,6 +20741,9 @@ spec:
                       required:
                       - key
                       type: object
+                    enableHttp2:
+                      description: Whether to enable HTTP2.
+                      type: boolean
                     followRedirects:
                       description: FollowRedirects configures whether scrape requests
                         follow HTTP 3xx redirects.
